--- a/SpringAngular/src/main/resources/static/index.html
+++ b/SpringAngular/src/main/resources/static/index.html
@@ -88,7 +88,7 @@
 					<div class="modal-footer">
 						<button type="button" class="btn btn-primary"
 							ng-click="update(product.id,product)">Save</button>
-						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+						<button type="button" class="btn btn-default" data-dismiss="modal" ng-click="clear()">Close</button>
 					</div>
 				</div>
 
